--- a/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
+++ b/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
@@ -38,7 +38,7 @@
 
 .drafts-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   gap: var(--pdz-space-lg);
 }
 
@@ -51,6 +51,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 100%;
+
   @include shadow-hover-effect;
 }
 
