--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
@@ -2,6 +2,7 @@
 @use "../../../../styles/breakpoints" as *;
 @use "../../../../styles/mixins" as *;
 @use "../../../../styles/mixins/buttons" as *;
+@use "../../../../styles/global" as *;
 
 :host {
   flex-grow: 1;
@@ -13,7 +14,6 @@
   width: 100%;
   gap: 0.5rem;
   padding: 0 0.5rem 0.5rem;
-  background-color: var(--pdz-color-test);
 
   flex-direction: column;
   align-items: stretch;
@@ -24,7 +24,7 @@
 }
 
 section {
-  border: 1px solid var(--pdz-color-menu-border);
+  border: 1px solid pdz-color(menu-border);
   border-radius: var(--pdz-shape-corner-lg);
   width: fit-content;
   min-width: 33%;
@@ -47,20 +47,21 @@ section {
 
 .matchups-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   gap: var(--pdz-space-lg);
   padding: 0 0.5rem 0.5rem;
   align-items: start;
 }
 
 .matchup-card {
-  background-color: var(--pdz-color-secondary-container);
-  color: var(--pdz-color-on-secondary-container);
+  background-color: pdz-color(secondary-container);
+  color: pdz-color(on-secondary-container);
   border-radius: var(--pdz-shape-corner-md);
-  border: 1px solid var(--pdz-color-secondary-border);
+  border: 1px solid pdz-color(secondary-border);
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 100%;
   @include shadow-hover-effect;
   cursor: pointer;
 
@@ -69,12 +70,12 @@ section {
   }
 
   .card-header {
-    background-color: var(--pdz-color-secondary-container-high);
+    background-color: pdz-color(secondary-container-high);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: var(--pdz-space-sm) var(--pdz-space-md);
-    border-bottom: 1px solid var(--pdz-color-secondary-border);
+    border-bottom: 1px solid pdz-color(secondary-border);
 
     .matchup-stage {
       font-size: 0.8rem;
@@ -92,6 +93,40 @@ section {
       @include icon-button(());
     }
   }
+  .card-menu {
+    position: relative;
+
+    .menu-dropdown {
+      position: absolute;
+      top: 100%;
+      right: 0;
+      background-color: var(--pdz-color-secondary-subtle);
+      border-radius: var(--pdz-shape-corner-sm);
+      box-shadow: var(--pdz-level-2);
+      z-index: 10;
+      width: fit-content;
+      padding: var(--pdz-space-sm) 0;
+      display: flex;
+      flex-direction: column;
+
+      .menu-item {
+        display: flex;
+        align-items: center;
+        gap: var(--pdz-space-md);
+        padding: var(--pdz-space-md);
+        background: none;
+        border: none;
+        width: 100%;
+        cursor: pointer;
+        font-size: 1rem;
+        color: var(--pdz-color-on-secondary-container);
+        text-wrap: nowrap;
+        &:hover {
+          background-color: var(--pdz-color-secondary-container-hover);
+        }
+      }
+    }
+  }
 
   .card-body {
     padding: var(--pdz-space-sm) var(--pdz-space-md);
@@ -106,32 +141,24 @@ section {
 
   .card-footer {
     padding: var(--pdz-space-xs) var(--pdz-space-md);
-    border-top: 1px solid var(--pdz-color-secondary-border);
+    border-top: 1px solid pdz-color(secondary-border);
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: var(--pdz-space-2xs);
 
-    .score-button {
-      font-size: 0.8rem;
-      width: 5.5rem;
-      padding: 3px;
-      border-radius: 0.625rem;
-      line-height: 0.9rem;
-      box-shadow: var(--pdz-level-2);
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      > div {
-        background-color: var(--pdz-color-secondary-container);
-        color: var(--pdz-color-on-secondary-container);
-        padding: var(--pdz-space-2xs);
-        border-radius: var(--pdz-shape-corner-sm);
-      }
-    }
-
     .score-placeholder {
       opacity: 0.7;
+    }
+    .footer-link {
+      @include flat-button(
+        (
+          padding: var(--pdz-space-xs) var(--pdz-space-md),
+          border-radius: var(--pdz-shape-corner-sm),
+          background-hover: pdz-color(secondary-container-high),
+          border: none,
+        )
+      );
     }
   }
 }
@@ -201,6 +228,7 @@ section {
     }
     .coach-name {
       font-size: 0.8rem;
+      line-height: 0.9rem;
     }
   }
   .matchup-logo {
@@ -217,32 +245,30 @@ section {
   }
 }
 
-.matchup-stage {
-  font-size: 0.6rem;
-  line-height: 0.8rem;
-}
-
-$matchup-sprite-size: 4rem;
-pdz-sprite {
-  max-height: $matchup-sprite-size;
-  aspect-ratio: 1/1;
-}
-
 .score-button {
-  font-size: 0.8rem;
-  width: 4rem;
-  padding: 3px;
+  padding: var(--pdz-space-2xs) var(--pdz-space-sm);
   border-radius: 0.625rem;
-  line-height: 0.9rem;
-  box-shadow: var(--pdz-level-2);
-  &:hover {
-    box-shadow: var(--pdz-level-1);
+  box-shadow: var(--pdz-level-1);
+  &.pdz-background-neg {
+    background-color: var(--pdz-color-scale-negative-2);
   }
-  > div {
+
+  &.pdz-background-pos {
+    background-color: var(--pdz-color-scale-positive-2);
+  }
+
+  &.pdz-background-neut {
     background-color: var(--pdz-color-secondary-container);
-    color: var(--pdz-color-on-secondary-container);
-    padding: var(--pdz-space-2xs);
-    border-radius: var(--pdz-shape-corner-sm);
+  }
+
+  color: pdz-color(on-secondary-container);
+  border-radius: var(--pdz-shape-corner-sm);
+
+  justify-content: center;
+  text-align: center;
+  .score {
+    font-size: 0.8rem;
+    line-height: 0.9rem;
   }
 }
 
@@ -297,7 +323,7 @@ pdz-sprite {
   }
 
   th.cdk-header-cell {
-    border-bottom: 2px solid var(--pdz-color-secondary-border);
+    border-bottom: 2px solid pdz-color(secondary-border);
     font-size: 0.8rem;
   }
 
@@ -323,7 +349,7 @@ pdz-sprite {
 
   tr.cdk-row {
     &:hover {
-      background-color: var(--pdz-color-secondary-container);
+      background-color: pdz-color(secondary-container);
     }
   }
 
