update token color sets

--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -4,277 +4,277 @@ $core-tokens: (
   "black": #000000,
 
   // Gray Scale
-  "gray-50": #f8f9fa,
-  "gray-100": #e9ecef,
-  "gray-150": #dee2e6,
-  "gray-200": #ced4da,
-  "gray-250": #bec4ca,
-  "gray-300": #adb5bd,
-  "gray-350": #9ca3ac,
-  "gray-400": #868e96,
-  "gray-450": #767d85,
-  "gray-500": #6c757d,
-  "gray-550": #616a72,
-  "gray-600": #5a6268,
-  "gray-650": #495057,
-  "gray-700": #444b51,
-  "gray-750": #3e444a,
-  "gray-800": #343a40,
-  "gray-850": #2b3035,
-  "gray-900": #212529,
-  "gray-950": #1a1d20,
+  "gray-50": #f9f9f9,
+  "gray-100": #ebebeb,
+  "gray-150": #dedede,
+  "gray-200": #d0d0d0,
+  "gray-250": #c3c3c3,
+  "gray-300": #b5b5b5,
+  "gray-350": #a8a8a8,
+  "gray-400": #9a9a9a,
+  "gray-450": #8d8d8d,
+  "gray-500": #808080,
+  "gray-550": #727272,
+  "gray-600": #656565,
+  "gray-650": #575757,
+  "gray-700": #4a4a4a,
+  "gray-750": #3c3c3c,
+  "gray-800": #2f2f2f,
+  "gray-850": #212121,
+  "gray-900": #141414,
+  "gray-950": #060606,
 
   // Purple
-  "purple-50": #f6f2ff,
-  "purple-100": #ede7f6,
-  "purple-150": #e4dcf3,
-  "purple-200": #d1c4e9,
-  "purple-250": #bfb1e0,
-  "purple-300": #b39ddb,
-  "purple-350": #a388d1,
-  "purple-400": #9575cd,
-  "purple-450": #8762c8,
-  "purple-500": #7e57c2,
-  "purple-550": #724bbd,
-  "purple-600": #673ab7,
-  "purple-650": #5e35b1,
-  "purple-700": #512e99,
-  "purple-750": #452682,
-  "purple-800": #381f6b,
-  "purple-850": #2c1754,
-  "purple-900": #211140,
-  "purple-950": #180c2b,
+  "purple-50": #eee6ff,
+  "purple-100": #dccdfe,
+  "purple-150": #cbb4fc,
+  "purple-200": #bb9cfb,
+  "purple-250": #ab84f8,
+  "purple-300": #9d6ff6,
+  "purple-350": #915cf2,
+  "purple-400": #864bee,
+  "purple-450": #7d3be8,
+  "purple-500": #752ee1,
+  "purple-550": #6d23d8,
+  "purple-600": #651acd,
+  "purple-650": #5d12bf,
+  "purple-700": #530cae,
+  "purple-750": #490799,
+  "purple-800": #3e0483,
+  "purple-850": #32026a,
+  "purple-900": #25014f,
+  "purple-950": #180033,
 
   // Pink
-  "pink-50": #fce4ec,
-  "pink-100": #f8bbd0,
-  "pink-150": #f4a0be,
-  "pink-200": #f083ac,
-  "pink-250": #f06292,
-  "pink-300": #ec407a,
-  "pink-350": #e91e63,
-  "pink-400": #e21a5c,
-  "pink-450": #d81b60,
-  "pink-500": #c2185b,
-  "pink-550": #ad1457,
-  "pink-600": #9c124d,
-  "pink-650": #880e4f,
-  "pink-700": #7e0c45,
-  "pink-750": #700a3d,
-  "pink-800": #610934,
-  "pink-850": #56082e,
-  "pink-900": #4a0727,
-  "pink-950": #3c051f,
+  "pink-50": #ffcce0,
+  "pink-100": #feb6d1,
+  "pink-150": #fca0c3,
+  "pink-200": #fb8ab4,
+  "pink-250": #f876a4,
+  "pink-300": #f66395,
+  "pink-350": #f25286,
+  "pink-400": #ee4277,
+  "pink-450": #e83569,
+  "pink-500": #e1295a,
+  "pink-550": #d81f4c,
+  "pink-600": #cd1740,
+  "pink-650": #bf1034,
+  "pink-700": #ae0b29,
+  "pink-750": #990620,
+  "pink-800": #830418,
+  "pink-850": #6a0212,
+  "pink-900": #4f000c,
+  "pink-950": #330008,
 
   // Cyan
-  "cyan-50": #f0fbfc,
-  "cyan-100": #e0f7fa,
-  "cyan-150": #ccecf2,
-  "cyan-200": #b2ebf2,
-  "cyan-250": #89e2ee,
-  "cyan-300": #60d8ea,
-  "cyan-350": #4dd0e1,
-  "cyan-400": #26c6da,
-  "cyan-450": #00bcd4,
-  "cyan-500": #00acc1,
-  "cyan-550": #009cb2,
-  "cyan-600": #008ba2,
-  "cyan-650": #007c93,
-  "cyan-700": #006e83,
-  "cyan-750": #006074,
-  "cyan-800": #005466,
-  "cyan-850": #004858,
-  "cyan-900": #003c4b,
-  "cyan-950": #01313f,
+  "cyan-50": #e6feff,
+  "cyan-100": #cdfbfe,
+  "cyan-150": #b4f7fc,
+  "cyan-200": #9cf3fb,
+  "cyan-250": #84ecf8,
+  "cyan-300": #6fe3f6,
+  "cyan-350": #5cd8f2,
+  "cyan-400": #4bcbee,
+  "cyan-450": #3bbbe8,
+  "cyan-500": #2eaae1,
+  "cyan-550": #2397d8,
+  "cyan-600": #1a84cd,
+  "cyan-650": #1272bf,
+  "cyan-700": #0c60ae,
+  "cyan-750": #074f99,
+  "cyan-800": #043f83,
+  "cyan-850": #02306a,
+  "cyan-900": #01234f,
+  "cyan-950": #001633,
 
   // Orange
-  "orange-50": #fef9f4,
-  "orange-100": #fcece1,
-  "orange-150": #f9e0ce,
-  "orange-200": #f6d0b3,
-  "orange-250": #f3c098,
-  "orange-300": #f0ae7d,
-  "orange-350": #ed9d61,
-  "orange-400": #e98a44,
-  "orange-450": #e27931,
-  "orange-500": #da661e,
-  "orange-550": #c15a1a,
-  "orange-600": #a94f17,
-  "orange-650": #924515,
-  "orange-700": #7a3b12,
-  "orange-750": #62310f,
-  "orange-800": #4b270c,
-  "orange-850": #331d09,
-  "orange-900": #1b1306,
-  "orange-950": #040903,
+  "orange-50": #fff0e6,
+  "orange-100": #fee1cd,
+  "orange-150": #fcd1b4,
+  "orange-200": #fbc29c,
+  "orange-250": #f8b284,
+  "orange-300": #f6a26f,
+  "orange-350": #f2925c,
+  "orange-400": #ee824b,
+  "orange-450": #e8723b,
+  "orange-500": #e1622e,
+  "orange-550": #d85423,
+  "orange-600": #cd461a,
+  "orange-650": #bf3912,
+  "orange-700": #ae2d0c,
+  "orange-750": #992407,
+  "orange-800": #831b04,
+  "orange-850": #6a1402,
+  "orange-900": #4f0e01,
+  "orange-950": #330800,
 
-  // Error (Red)
-  "red-50": #ffebee,
-  "red-100": #ffcdd2,
-  "red-150": #ffb4ab,
-  "red-200": #ef9a9a,
-  "red-250": #e57373,
-  "red-300": #ef5350,
-  "red-350": #f44336,
-  "red-400": #e53935,
-  "red-450": #d32f2f,
-  "red-500": #c62828,
-  "red-550": #ba1a1a,
-  "red-600": #b71c1c,
-  "red-650": #a51a1a,
-  "red-700": #93000a,
-  "red-750": #890009,
-  "red-800": #7f0008,
-  "red-850": #690005,
-  "red-900": #540004,
-  "red-950": #410002,
+  // Red
+  "red-50": #ffe6e6,
+  "red-100": #fecdcd,
+  "red-150": #fcb4b4,
+  "red-200": #fb9c9c,
+  "red-250": #f88484,
+  "red-300": #f66f6f,
+  "red-350": #f25c5c,
+  "red-400": #ee4b4b,
+  "red-450": #e83b3b,
+  "red-500": #e12e2e,
+  "red-550": #d82323,
+  "red-600": #cd1a1a,
+  "red-650": #bf1212,
+  "red-700": #ae0c0c,
+  "red-750": #990707,
+  "red-800": #830404,
+  "red-850": #6a0202,
+  "red-900": #4f0101,
+  "red-950": #330000,
 
   // Amber
-  "amber-50": #fff8e1,
-  "amber-100": #ffecb3,
-  "amber-150": #ffe082,
-  "amber-200": #ffd54f,
-  "amber-250": #ffca28,
-  "amber-300": #ffc107,
-  "amber-350": #ffb300,
-  "amber-400": #ffa000,
-  "amber-450": #ff8f00,
-  "amber-500": #ff6f00,
-  "amber-550": #e66500,
-  "amber-600": #d45d00,
-  "amber-650": #c25400,
-  "amber-700": #b04c00,
-  "amber-750": #9e4300,
-  "amber-800": #8c3b00,
-  "amber-850": #7a3200,
-  "amber-900": #692a00,
-  "amber-950": #4d3600,
+  "amber-50": #fff9e6,
+  "amber-100": #fef2cd,
+  "amber-150": #fcebb4,
+  "amber-200": #fbe49c,
+  "amber-250": #f8dc84,
+  "amber-300": #f6d46f,
+  "amber-350": #f2cb5c,
+  "amber-400": #eec24b,
+  "amber-450": #e8b83b,
+  "amber-500": #e1ad2e,
+  "amber-550": #d8a123,
+  "amber-600": #cd951a,
+  "amber-650": #bf8712,
+  "amber-700": #ae780c,
+  "amber-750": #996807,
+  "amber-800": #835704,
+  "amber-850": #6a4602,
+  "amber-900": #4f3401,
+  "amber-950": #332100,
 
   // Yellow
   "yellow-50": #ffffe6,
-  "yellow-100": #ffffb8,
-  "yellow-150": #ffff9f,
-  "yellow-200": #ffff8a,
-  "yellow-250": #ffff73,
-  "yellow-300": #ffff5c,
-  "yellow-350": #ffff45,
-  "yellow-400": #ffff2e,
-  "yellow-450": #ffff17,
-  "yellow-500": #ffff00,
-  "yellow-550": #e9e900,
-  "yellow-600": #d1d100,
-  "yellow-650": #b9b900,
-  "yellow-700": #a3a300,
-  "yellow-750": #8b8b00,
-  "yellow-800": #757500,
-  "yellow-850": #5f5f00,
-  "yellow-900": #474700,
-  "yellow-950": #1a1a00,
+  "yellow-100": #fefecd,
+  "yellow-150": #fcfcb4,
+  "yellow-200": #fbfb9c,
+  "yellow-250": #f8f884,
+  "yellow-300": #f6f66f,
+  "yellow-350": #f2f25c,
+  "yellow-400": #eeee4b,
+  "yellow-450": #e8e83b,
+  "yellow-500": #e1e12e,
+  "yellow-550": #d8d823,
+  "yellow-600": #cdcd1a,
+  "yellow-650": #bfbf12,
+  "yellow-700": #aeae0c,
+  "yellow-750": #999907,
+  "yellow-800": #838304,
+  "yellow-850": #6a6a02,
+  "yellow-900": #4f4f01,
+  "yellow-950": #333300,
 
   // Green
-  "green-50": #e8f5e9,
-  "green-100": #c8e6c9,
-  "green-150": #a5d6a7,
-  "green-200": #81c784,
-  "green-250": #74d98f,
-  "green-300": #66bb6a,
-  "green-350": #4caf50,
-  "green-400": #43a047,
-  "green-450": #388e3c,
-  "green-500": #2e8b57,
-  "green-550": #2e7d32,
-  "green-600": #1b5e20,
-  "green-650": #17521c,
-  "green-700": #144718,
-  "green-750": #113c14,
-  "green-800": #0e3111,
-  "green-850": #0c2a0e,
-  "green-900": #09220b,
-  "green-950": #071c08,
+  "green-50": #e6ffee,
+  "green-100": #cdfedd,
+  "green-150": #b4fccc,
+  "green-200": #9cfbbb,
+  "green-250": #84f8ab,
+  "green-300": #6ff69c,
+  "green-350": #5cf28e,
+  "green-400": #4bee81,
+  "green-450": #3be875,
+  "green-500": #2ee16a,
+  "green-550": #23d860,
+  "green-600": #1acd56,
+  "green-650": #12bf4c,
+  "green-700": #0cae42,
+  "green-750": #079938,
+  "green-800": #04832e,
+  "green-850": #026a24,
+  "green-900": #014f1b,
+  "green-950": #003311,
 
   // Emerald
-  "emerald-50": #ecfdf5,
-  "emerald-100": #d1fae5,
-  "emerald-150": #bcf7db,
-  "emerald-200": #a7f3d0,
-  "emerald-250": #8bedc4,
-  "emerald-300": #6ee7b7,
-  "emerald-350": #51dda8,
-  "emerald-400": #34d399,
-  "emerald-450": #22c68d,
-  "emerald-500": #10b981,
-  "emerald-550": #0ba875,
-  "emerald-600": #059669,
-  "emerald-650": #058760,
-  "emerald-700": #047857,
-  "emerald-750": #056c4f,
-  "emerald-800": #065f46,
-  "emerald-850": #065741,
-  "emerald-900": #064e3b,
-  "emerald-950": #022c22,
+  "emerald-50": #e6ffee,
+  "emerald-100": #cdfedd,
+  "emerald-150": #b4fccd,
+  "emerald-200": #9cfbbe,
+  "emerald-250": #84f8b2,
+  "emerald-300": #6ff6a8,
+  "emerald-350": #5cf2a0,
+  "emerald-400": #4bee9c,
+  "emerald-450": #3be89a,
+  "emerald-500": #2ee199,
+  "emerald-550": #23d898,
+  "emerald-600": #1acd95,
+  "emerald-650": #12bf90,
+  "emerald-700": #0cae88,
+  "emerald-750": #07997b,
+  "emerald-800": #04836b,
+  "emerald-850": #026a58,
+  "emerald-900": #014f43,
+  "emerald-950": #00332b,
 
   // Lime
-  "lime-50": #f7fee7,
-  "lime-100": #eefbe6,
-  "lime-150": #e2f6d5,
-  "lime-200": #d3f1c4,
-  "lime-250": #c5edb3,
-  "lime-300": #b6e8a2,
-  "lime-350": #a7e491,
-  "lime-400": #99e080,
-  "lime-450": #8adba0,
-  "lime-500": #7cd66e,
-  "lime-550": #6ed15c,
-  "lime-600": #60cc4b,
-  "lime-650": #52c83a,
-  "lime-700": #44c329,
-  "lime-750": #37bf18,
-  "lime-800": #28ba06,
-  "lime-850": #19b505,
-  "lime-900": #0ab004,
-  "lime-950": #07a603,
+  "lime-50": #e6ffec,
+  "lime-100": #cdfeda,
+  "lime-150": #b4fcc6,
+  "lime-200": #9cfbb2,
+  "lime-250": #84f89d,
+  "lime-300": #6ff687,
+  "lime-350": #5cf271,
+  "lime-400": #4bee5a,
+  "lime-450": #3be844,
+  "lime-500": #2fe12e,
+  "lime-550": #2dd823,
+  "lime-600": #2ccd1a,
+  "lime-650": #2bbf12,
+  "lime-700": #29ae0c,
+  "lime-750": #269907,
+  "lime-800": #218304,
+  "lime-850": #1c6a02,
+  "lime-900": #154f01,
+  "lime-950": #0e3300,
 
   //Rose
-  "rose-50": #fff1f2,
-  "rose-100": #ffe4e6,
-  "rose-150": #ffd9dd,
-  "rose-200": #fecdd3,
-  "rose-250": #feb9c1,
-  "rose-300": #fda4af,
-  "rose-350": #fc8b9a,
-  "rose-400": #fb7185,
-  "rose-450": #f85872,
-  "rose-500": #f43f5e,
-  "rose-550": #eb2e53,
-  "rose-600": #e11d48,
-  "rose-650": #d01842,
-  "rose-700": #be123c,
-  "rose-750": #af123b,
-  "rose-800": #9f1239,
-  "rose-850": #941338,
-  "rose-900": #881337,
-  "rose-950": #4c0519,
+  "rose-50": #ffe6ef,
+  "rose-100": #fecddf,
+  "rose-150": #fcb4cf,
+  "rose-200": #fb9cbf,
+  "rose-250": #f884ae,
+  "rose-300": #f66f9d,
+  "rose-350": #f25c8d,
+  "rose-400": #ee4b7d,
+  "rose-450": #e83b6d,
+  "rose-500": #e12e5e,
+  "rose-550": #d8234f,
+  "rose-600": #cd1a42,
+  "rose-650": #bf1235,
+  "rose-700": #ae0c2a,
+  "rose-750": #990721,
+  "rose-800": #830419,
+  "rose-850": #6a0212,
+  "rose-900": #4f010c,
+  "rose-950": #330008,
 
   // Blue
-  "blue-50": #e3f2fd,
-  "blue-100": #cce9f9,
-  "blue-150": #90caf9,
-  "blue-200": #64b5f6,
-  "blue-250": #8acbff,
-  "blue-300": #42a5f5,
-  "blue-350": #2196f3,
-  "blue-400": #1e88e5,
-  "blue-450": #1976d2,
-  "blue-500": #1565c0,
-  "blue-550": #0288d1,
-  "blue-600": #0d47a1,
-  "blue-650": #0c4091,
-  "blue-700": #0a3880,
-  "blue-750": #093170,
-  "blue-800": #072a60,
-  "blue-850": #052350,
-  "blue-900": #002944,
-  "blue-950": #021e31,
+  "blue-50": #e6f6ff,
+  "blue-100": #cdecfe,
+  "blue-150": #b4e1fc,
+  "blue-200": #9cd5fb,
+  "blue-250": #84c7f8,
+  "blue-300": #6fb9f6,
+  "blue-350": #5ca9f2,
+  "blue-400": #4b97ee,
+  "blue-450": #3b85e8,
+  "blue-500": #2e71e1,
+  "blue-550": #235ed8,
+  "blue-600": #1a4ccd,
+  "blue-650": #123bbf,
+  "blue-700": #0c2cae,
+  "blue-750": #072099,
+  "blue-800": #041783,
+  "blue-850": #02106a,
+  "blue-900": #010a4f,
+  "blue-950": #000633,
 
   // Logo Specific
   "logo-core-color": #9c65aa
