--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -44,8 +44,12 @@
       >
         Contribute to the Project
       </a>
-      <a class="secondary-action btn btn-primary" routerLink="/supporters">
-        Project Supporters
+      <a
+        class="secondary-action btn btn-primary"
+        href="https://draftzone-shop.fourthwall.com/pages/join-support"
+        target="_blank"
+      >
+        Support the Project
       </a>
       <a class="secondary-action btn btn-primary" routerLink="/about">
         About Pokemon DraftZone
